--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,60 +9,60 @@ license = "GPL-3.0-or-later"
 python = ">=3.9, <3.12"
 
 # for general DB access
-SQLAlchemy = "2.0.23"
-gunicorn = "21.2.0"
+SQLAlchemy = "2.0.30"
+gunicorn = "22.0.0"
 # for caching_sha2_password access in MySQL
-cryptography = '40.0.2'
+cryptography = '42.0.8'
 # For parsing the arguments for programs (always required basically)
-typed-argument-parser = '1.7.2'
+typed-argument-parser = "1.10.0"
+
 # For the config file
-pydantic = '1.10.13'
+pydantic = '1.10.15'
 # For validating units
 pint = '0.23'
 
-pymysql = '1.1.0'
+pymysql = '1.1.1'
 
 # For the Excel spreadsheet export
-openpyxl = "3.0.9"
+openpyxl = "3.1.3"
 
 # for correcting UTC timezone for dates
 python-dateutil = "2.8.2"
 # for the webserver
-fastapi = "0.105.0"
+fastapi = "0.111.0"
 # asynchronous db client
-aiosqlite = "0.17.0"
+aiosqlite = "0.20.0"
 # asynchronous db client
-asyncmy = "0.2.7"
+asyncmy = "0.2.9"
 
 # for time zone detection and conversion of timestamps in attributi
-pytz = "2021.3"
+pytz = "2024.1"
 # to test incoming files for their mime types
-python-magic = "0.4.24"
+python-magic = "0.4.27"
 
 # For http requests
-aiohttp = "3.9.1"
+aiohttp = "3.9.5"
 
-alembic = "1.7.7"
+alembic = "1.13.1"
 # For the production-ready server
-uvicorn = "0.23.2"
+uvicorn = "0.30.1"
 # For the file upload in the web server
 # see https://fastapi.tiangolo.com/tutorial/request-files/
-python-multipart = "0.0.6"
+python-multipart = "0.0.9"
 
 # For parsing the filter expressions
-lark = "1.1.8"
-structlog = "22.1.0"
+lark = "1.1.9"
+structlog = "24.2.0"
 structlog-overtime = "1.0.1"
 
 # This is just to force poetry to use 1.1.3 instead of 1.1.2 which fails on Windows
 greenlet = "1.1.3"
 
 [tool.poetry.dev-dependencies]
-autoimport = "1.4.0"
 # for FastAPI tests, see
 # https://fastapi.tiangolo.com/tutorial/testing/
-httpx = "0.25.2"
-pytest-bdd = "7.0.1"
+httpx = "0.27.0"
+pytest-bdd = "7.2.0"
 # documentation
 sphinx = "7.2.6"
 # for markdown in documentation
@@ -70,25 +70,25 @@ myst-parser = "2.0.0"
 sphinxcontrib-mermaid = "0.9.2"
 sphinx-autobuild = "2024.2.4"
 sphinxcontrib-spelling = "8.0.0"
-black = '24.3.0'
-types-pytz = "2021.3.6"
-vulture = "2.10"
-pylint = '3.0.2'
-pyfakefs = '4.7.0'
+black = '24.4.2'
+types-pytz = "2024.1.0.20240417"
+vulture = "2.11"
+pylint = '3.2.3'
+pyfakefs = '5.5.0'
 openpyxl-stubs = "0.1.25"
-pytest = '6.2.5'
-hypothesis = '6.27.1'
-pytest-cov = '2.12.1'
+pytest = '8.2.2'
+hypothesis = '6.103.1'
+pytest-cov = '5.0.0'
 types-python-dateutil = "2.8.3"
 # slurm
-types-requests = "2.26.0"
+types-requests = "2.32.0.20240602"
 # config file
-types-PyYAML = '5.4.12'
-pytest-asyncio = "0.17.2"
-isort = "5.12.0"
-pytest-subprocess = "1.4.1"
-pytest-xdist = "3.5.0"
-fawltydeps = "0.12.0"
+types-PyYAML = '6.0.12.20240311'
+pytest-asyncio = "0.23.7"
+isort = "5.13.2"
+pytest-subprocess = "1.5.0"
+pytest-xdist = "3.6.1"
+fawltydeps = "0.15.0"
 
 [tool.poetry.scripts]
 # These are not all files in cli/, but the ones we definitely intend to keep.
