--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,48 +1,49 @@
-aiohttp==3.9.1 ; python_version >= "3.9" and python_version < "3.12"
+aiohttp==3.9.5 ; python_version >= "3.9" and python_version < "3.12"
 aiosignal==1.3.1 ; python_version >= "3.9" and python_version < "3.12"
-aiosqlite==0.17.0 ; python_version >= "3.9" and python_version < "3.12"
+aiosqlite==0.20.0 ; python_version >= "3.9" and python_version < "3.12"
 alabaster==0.7.16 ; python_version >= "3.9" and python_version < "3.12"
-alembic==1.7.7 ; python_version >= "3.9" and python_version < "3.12"
+alembic==1.13.1 ; python_version >= "3.9" and python_version < "3.12"
 anyio==3.7.1 ; python_version >= "3.9" and python_version < "3.12"
-astroid==3.0.1 ; python_version >= "3.9" and python_version < "3.12"
+astroid==3.2.2 ; python_version >= "3.9" and python_version < "3.12"
 async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11"
-asyncmy==0.2.7 ; python_version >= "3.9" and python_version < "3.12"
-atomicwrites==1.4.1 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "win32"
+asyncmy==0.2.9 ; python_version >= "3.9" and python_version < "3.12"
 attrs==23.1.0 ; python_version >= "3.9" and python_version < "3.12"
-autoflake==2.3.1 ; python_version >= "3.9" and python_version < "3.12"
-autoimport==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
 babel==2.14.0 ; python_version >= "3.9" and python_version < "3.12"
-black==24.3.0 ; python_version >= "3.9" and python_version < "3.12"
+black==24.4.2 ; python_version >= "3.9" and python_version < "3.12"
 certifi==2023.11.17 ; python_version >= "3.9" and python_version < "3.12"
-cffi==1.16.0 ; python_version >= "3.9" and python_version < "3.12"
+cffi==1.16.0 ; python_version >= "3.9" and python_version < "3.12" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "3.12"
 click==8.1.7 ; python_version >= "3.9" and python_version < "3.12"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.12"
-coverage==7.3.2 ; python_version >= "3.9" and python_version < "3.12"
-cryptography==40.0.2 ; python_version >= "3.9" and python_version < "3.12"
+coverage[toml]==7.3.2 ; python_version >= "3.9" and python_version < "3.12"
+cryptography==42.0.8 ; python_version >= "3.9" and python_version < "3.12"
 dill==0.3.7 ; python_version >= "3.9" and python_version < "3.12"
+dnspython==2.6.1 ; python_version >= "3.9" and python_version < "3.12"
+docstring-parser==0.16 ; python_version >= "3.9" and python_version < "3.12"
 docutils==0.19 ; python_version >= "3.9" and python_version < "3.12"
+email-validator==2.1.1 ; python_version >= "3.9" and python_version < "3.12"
 et-xmlfile==1.1.0 ; python_version >= "3.9" and python_version < "3.12"
 exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
-execnet==2.0.2 ; python_version >= "3.9" and python_version < "3.12"
-fastapi==0.105.0 ; python_version >= "3.9" and python_version < "3.12"
-fawltydeps==0.12.0 ; python_version >= "3.9" and python_version < "3.12"
+execnet==2.1.1 ; python_version >= "3.9" and python_version < "3.12"
+fastapi-cli==0.0.4 ; python_version >= "3.9" and python_version < "3.12"
+fastapi==0.111.0 ; python_version >= "3.9" and python_version < "3.12"
+fawltydeps==0.15.0 ; python_version >= "3.9" and python_version < "3.12"
 frozenlist==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
 greenlet==1.1.3 ; python_version >= "3.9" and python_version < "3.12"
-gunicorn==21.2.0 ; python_version >= "3.9" and python_version < "3.12"
+gunicorn==22.0.0 ; python_version >= "3.9" and python_version < "3.12"
 h11==0.14.0 ; python_version >= "3.9" and python_version < "3.12"
 httpcore==1.0.2 ; python_version >= "3.9" and python_version < "3.12"
-httpx==0.25.2 ; python_version >= "3.9" and python_version < "3.12"
-hypothesis==6.27.1 ; python_version >= "3.9" and python_version < "3.12"
+httptools==0.6.1 ; python_version >= "3.9" and python_version < "3.12"
+httpx==0.27.0 ; python_version >= "3.9" and python_version < "3.12"
+hypothesis==6.103.1 ; python_version >= "3.9" and python_version < "3.12"
 idna==3.6 ; python_version >= "3.9" and python_version < "3.12"
 imagesize==1.4.1 ; python_version >= "3.9" and python_version < "3.12"
 importlib-metadata==6.6.0 ; python_version >= "3.9" and python_version < "3.12"
 iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "3.12"
-isort==5.12.0 ; python_version >= "3.9" and python_version < "3.12"
+isort==5.13.2 ; python_version >= "3.9" and python_version < "3.12"
 jinja2==3.1.3 ; python_version >= "3.9" and python_version < "3.12"
-lark==1.1.8 ; python_version >= "3.9" and python_version < "3.12"
+lark==1.1.9 ; python_version >= "3.9" and python_version < "3.12"
 livereload==2.6.3 ; python_version >= "3.9" and python_version < "3.12"
-maison==1.4.2 ; python_version >= "3.9" and python_version < "3.12"
 mako==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "3.12"
 markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "3.12"
@@ -54,7 +55,8 @@ mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "3.12"
 mypy==1.7.1 ; python_version >= "3.9" and python_version < "3.12"
 myst-parser==2.0.0 ; python_version >= "3.9" and python_version < "3.12"
 openpyxl-stubs==0.1.25 ; python_version >= "3.9" and python_version < "3.12"
-openpyxl==3.0.9 ; python_version >= "3.9" and python_version < "3.12"
+openpyxl==3.1.3 ; python_version >= "3.9" and python_version < "3.12"
+orjson==3.10.3 ; python_version >= "3.9" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.9" and python_version < "3.12"
 parse-type==0.6.2 ; python_version >= "3.9" and python_version < "3.12"
 parse==1.20.0 ; python_version >= "3.9" and python_version < "3.12"
@@ -62,31 +64,31 @@ pathspec==0.11.2 ; python_version >= "3.9" and python_version < "3.12"
 pint==0.23 ; python_version >= "3.9" and python_version < "3.12"
 pip-requirements-parser==32.0.1 ; python_version >= "3.9" and python_version < "3.12"
 platformdirs==4.0.0 ; python_version >= "3.9" and python_version < "3.12"
-pluggy==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
-py==1.11.0 ; python_version >= "3.9" and python_version < "3.12"
-pycparser==2.21 ; python_version >= "3.9" and python_version < "3.12"
-pydantic==1.10.13 ; python_version >= "3.9" and python_version < "3.12"
+pluggy==1.5.0 ; python_version >= "3.9" and python_version < "3.12"
+pycparser==2.21 ; python_version >= "3.9" and python_version < "3.12" and platform_python_implementation != "PyPy"
+pydantic==1.10.15 ; python_version >= "3.9" and python_version < "3.12"
 pyenchant==3.2.2 ; python_version >= "3.9" and python_version < "3.12"
-pyfakefs==4.7.0 ; python_version >= "3.9" and python_version < "3.12"
-pyflakes==3.2.0 ; python_version >= "3.9" and python_version < "3.12"
+pyfakefs==5.5.0 ; python_version >= "3.9" and python_version < "3.12"
 pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.12"
-pylint==3.0.2 ; python_version >= "3.9" and python_version < "3.12"
-pymysql==1.1.0 ; python_version >= "3.9" and python_version < "3.12"
+pylint==3.2.3 ; python_version >= "3.9" and python_version < "3.12"
+pymysql==1.1.1 ; python_version >= "3.9" and python_version < "3.12"
 pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "3.12"
-pyprojroot==0.3.0 ; python_version >= "3.9" and python_version < "3.12"
-pytest-asyncio==0.17.2 ; python_version >= "3.9" and python_version < "3.12"
-pytest-bdd==7.0.1 ; python_version >= "3.9" and python_version < "3.12"
-pytest-cov==2.12.1 ; python_version >= "3.9" and python_version < "3.12"
-pytest-subprocess==1.4.1 ; python_version >= "3.9" and python_version < "3.12"
-pytest-xdist==3.5.0 ; python_version >= "3.9" and python_version < "3.12"
-pytest==6.2.5 ; python_version >= "3.9" and python_version < "3.12"
+pytest-asyncio==0.23.7 ; python_version >= "3.9" and python_version < "3.12"
+pytest-bdd==7.2.0 ; python_version >= "3.9" and python_version < "3.12"
+pytest-cov==5.0.0 ; python_version >= "3.9" and python_version < "3.12"
+pytest-subprocess==1.5.0 ; python_version >= "3.9" and python_version < "3.12"
+pytest-xdist==3.6.1 ; python_version >= "3.9" and python_version < "3.12"
+pytest==8.2.2 ; python_version >= "3.9" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.12"
-python-magic==0.4.24 ; python_version >= "3.9" and python_version < "3.12"
-python-multipart==0.0.6 ; python_version >= "3.9" and python_version < "3.12"
-pytz==2021.3 ; python_version >= "3.9" and python_version < "3.12"
+python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "3.12"
+python-magic==0.4.27 ; python_version >= "3.9" and python_version < "3.12"
+python-multipart==0.0.9 ; python_version >= "3.9" and python_version < "3.12"
+pytz==2024.1 ; python_version >= "3.9" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.9" and python_version < "3.12"
-sh==2.0.6 ; python_version >= "3.9" and python_version < "3.12"
+rich==13.7.1 ; python_version >= "3.9" and python_version < "3.12"
+setuptools==70.0.0 ; python_version >= "3.9" and python_version < "3.12"
+shellingham==1.5.4 ; python_version >= "3.9" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.9" and python_version < "3.12"
 sniffio==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
 snowballstemmer==2.2.0 ; python_version >= "3.9" and python_version < "3.12"
@@ -101,24 +103,28 @@ sphinxcontrib-mermaid==0.9.2 ; python_version >= "3.9" and python_version < "3.1
 sphinxcontrib-qthelp==1.0.7 ; python_version >= "3.9" and python_version < "3.12"
 sphinxcontrib-serializinghtml==1.1.10 ; python_version >= "3.9" and python_version < "3.12"
 sphinxcontrib-spelling==8.0.0 ; python_version >= "3.9" and python_version < "3.12"
-sqlalchemy==2.0.23 ; python_version >= "3.9" and python_version < "3.12"
-starlette==0.27.0 ; python_version >= "3.9" and python_version < "3.12"
+sqlalchemy==2.0.30 ; python_version >= "3.9" and python_version < "3.12"
+starlette==0.37.2 ; python_version >= "3.9" and python_version < "3.12"
 structlog-overtime==1.0.1 ; python_version >= "3.9" and python_version < "3.12"
-structlog==22.1.0 ; python_version >= "3.9" and python_version < "3.12"
-toml==0.10.2 ; python_version >= "3.9" and python_version < "3.12"
-tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
+structlog==24.2.0 ; python_version >= "3.9" and python_version < "3.12"
+tomli==2.0.1 ; python_version >= "3.9" and python_full_version <= "3.11.0a6"
 tomlkit==0.12.3 ; python_version >= "3.9" and python_version < "3.12"
 tornado==6.4 ; python_version >= "3.9" and python_version < "3.12"
-typed-argument-parser==1.7.2 ; python_version >= "3.9" and python_version < "3.12"
+typed-argument-parser==1.10.0 ; python_version >= "3.9" and python_version < "3.12"
+typer==0.12.3 ; python_version >= "3.9" and python_version < "3.12"
 types-python-dateutil==2.8.3 ; python_version >= "3.9" and python_version < "3.12"
-types-pytz==2021.3.6 ; python_version >= "3.9" and python_version < "3.12"
-types-pyyaml==5.4.12 ; python_version >= "3.9" and python_version < "3.12"
-types-requests==2.26.0 ; python_version >= "3.9" and python_version < "3.12"
+types-pytz==2024.1.0.20240417 ; python_version >= "3.9" and python_version < "3.12"
+types-pyyaml==6.0.12.20240311 ; python_version >= "3.9" and python_version < "3.12"
+types-requests==2.32.0.20240602 ; python_version >= "3.9" and python_version < "3.12"
 typing-extensions==4.8.0 ; python_version >= "3.9" and python_version < "3.12"
 typing-inspect==0.9.0 ; python_version >= "3.9" and python_version < "3.12"
+ujson==5.10.0 ; python_version >= "3.9" and python_version < "3.12"
 urllib3==2.1.0 ; python_version >= "3.9" and python_version < "3.12"
-uvicorn==0.23.2 ; python_version >= "3.9" and python_version < "3.12"
-vulture==2.10 ; python_version >= "3.9" and python_version < "3.12"
-xdg==6.0.0 ; python_version >= "3.9" and python_version < "3.12"
+uvicorn==0.30.1 ; python_version >= "3.9" and python_version < "3.12"
+uvicorn[standard]==0.30.1 ; python_version >= "3.9" and python_version < "3.12"
+uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "3.12"
+vulture==2.11 ; python_version >= "3.9" and python_version < "3.12"
+watchfiles==0.22.0 ; python_version >= "3.9" and python_version < "3.12"
+websockets==12.0 ; python_version >= "3.9" and python_version < "3.12"
 yarl==1.9.3 ; python_version >= "3.9" and python_version < "3.12"
 zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.12"
