--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["Philipp Middendorf <philipp.middendorf@desy.de>", "CFEL-SC <sc@cfel.
 license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
-python = ">=3.9, <3.12"
+python = ">=3.9, <3.13"
 
 # for general DB access
-SQLAlchemy = "2.0.30"
+SQLAlchemy = "2.0.36"
 gunicorn = "22.0.0"
 # for caching_sha2_password access in MySQL
 cryptography = '42.0.8'
@@ -17,14 +17,14 @@ cryptography = '42.0.8'
 typed-argument-parser = "1.10.0"
 
 # For the config file
-pydantic = '1.10.15'
+pydantic = "1.10.19"
 # For validating units
 pint = '0.23'
 
 pymysql = '1.1.1'
 
 # For the Excel spreadsheet export
-openpyxl = "3.1.3"
+openpyxl = "3.1.5"
 
 # for correcting UTC timezone for dates
 python-dateutil = "2.8.2"
@@ -57,9 +57,6 @@ lark = "1.1.9"
 structlog = "24.2.0"
 structlog-overtime = "1.0.1"
 
-# This is just to force poetry to use 1.1.3 instead of 1.1.2 which fails on Windows
-greenlet = "1.1.3"
-
 [tool.poetry.dev-dependencies]
 # for FastAPI tests, see
 # https://fastapi.tiangolo.com/tutorial/testing/
@@ -76,22 +73,20 @@ sphinxcontrib-spelling = "8.0.0"
 black = '24.4.2'
 types-pytz = "2024.1.0.20240417"
 vulture = "2.11"
-pylint = '3.2.3'
+pylint = "3.3.2"
 pyfakefs = '5.5.0'
-openpyxl-stubs = "0.1.25"
+types-openpyxl = "3.1.5.20241126"
 pytest = '8.2.2'
 hypothesis = '6.103.1'
 pytest-cov = '5.0.0'
 types-python-dateutil = "2.8.3"
 # slurm
 types-requests = "2.32.0.20240602"
-# config file
-types-PyYAML = '6.0.12.20240311'
 pytest-asyncio = "0.23.7"
 isort = "5.13.2"
 pytest-subprocess = "1.5.0"
 pytest-xdist = "3.6.1"
-fawltydeps = "0.15.0"
+fawltydeps = "0.18.0"
 
 [tool.poetry.scripts]
 # These are not all files in cli/, but the ones we definitely intend to keep.
@@ -118,7 +113,7 @@ load-plugins=["pylint.extensions.typing","pylint.extensions.redefined_variable_t
 extension-pkg-allow-list=["pydantic"]
 
 [tool.pylint."MESSAGES CONTROL"]
-disable=["invalid-name", "missing-module-docstring", "too-many-instance-attributes", "too-many-branches", "missing-class-docstring", "missing-function-docstring", "line-too-long", "missing-final-newline", "logging-not-lazy", "broad-exception-raised", "broad-exception-caught", "too-many-arguments", "bare-except", "too-few-public-methods", "too-many-locals", "too-many-nested-blocks", "too-many-statements", "too-many-public-methods", "too-many-return-statements", "blacklisted-name", "duplicate-code", "logging-fstring-interpolation", "too-many-lines", "too-many-boolean-expressions", "logging-format-interpolation", "raise-missing-from", "deprecated-typing-alias", "subprocess-run-check", "import-outside-toplevel", "too-many-ancestors"]
+disable=["invalid-name", "missing-module-docstring", "too-many-instance-attributes", "too-many-branches", "missing-class-docstring", "missing-function-docstring", "line-too-long", "missing-final-newline", "logging-not-lazy", "broad-exception-raised", "broad-exception-caught", "too-many-arguments", "bare-except", "too-few-public-methods", "too-many-locals", "too-many-nested-blocks", "too-many-statements", "too-many-public-methods", "too-many-return-statements", "blacklisted-name", "duplicate-code", "logging-fstring-interpolation", "too-many-lines", "too-many-boolean-expressions", "logging-format-interpolation", "raise-missing-from", "deprecated-typing-alias", "subprocess-run-check", "import-outside-toplevel", "too-many-ancestors", "too-many-positional-arguments"]
 
 [tool.fawltydeps]
 code = ["amarcord", "tests"]
@@ -132,15 +127,15 @@ ignore_undeclared = ["amarcord", "hypothesis", "pytest", "pytest_asyncio", "pyte
 # asyncpg for the migration script
 # uvicorn is our web server (same for gunicorn)
 # python-multipart is for the web server internals (file upload, see FastAPI docs)
-ignore_unused = ["aiosqlite", "asyncmy", "cryptography", "fawltydeps", "python-magic", "greenlet", "pymysql", "uvicorn", "python-multipart", "gunicorn", "asyncpg"]
+ignore_unused = ["aiosqlite", "asyncmy", "cryptography", "fawltydeps", "python-magic", "pymysql", "uvicorn", "python-multipart", "gunicorn", "asyncpg"]
 
 [tool.pyright]
 include = ["amarcord", "tests"]
 typeCheckingMode = "basic"
-useLibraryCodeForType = true
 strictListInference = true
 strictDictionaryInference = true
 strictSetInference = true
+enableReachabilityAnalysis = true
 reportInvalidStringEscapeSequence = true
 reportAssertAlwaysTrue = true
 reportInvalidTypeVarUse = false
@@ -148,7 +143,6 @@ reportInvalidTypeVarUse = false
 reportMissingTypeStubs = false
 reportSelfClsParameterName = true
 reportUnsupportedDunderAll = true
-reportUnusedExpression = true
 reportWildcardImportFromLibrary = true
 reportConstantRedefinition = true
 reportDeprecated = true
@@ -181,6 +175,7 @@ reportUnusedClass = true
 reportUnusedImport = true
 reportUnusedFunction = true
 reportUnusedVariable = true
+reportUnusedExpression = true
 reportUntypedBaseClass = true
 reportUntypedClassDecorator = true
 # this screws up quart route annotations
