--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,70 @@
-aiohttp==3.9.5 ; python_version >= "3.9" and python_version < "3.12"
-aiosignal==1.3.1 ; python_version >= "3.9" and python_version < "3.12"
-aiosqlite==0.20.0 ; python_version >= "3.9" and python_version < "3.12"
-alembic==1.13.1 ; python_version >= "3.9" and python_version < "3.12"
-anyio==3.7.1 ; python_version >= "3.9" and python_version < "3.12"
+aiohttp==3.9.5 ; python_version >= "3.9" and python_version < "3.13"
+aiosignal==1.3.1 ; python_version >= "3.9" and python_version < "3.13"
+aiosqlite==0.20.0 ; python_version >= "3.9" and python_version < "3.13"
+alembic==1.13.1 ; python_version >= "3.9" and python_version < "3.13"
+anyio==3.7.1 ; python_version >= "3.9" and python_version < "3.13"
 async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11.0"
-asyncmy==0.2.9 ; python_version >= "3.9" and python_version < "3.12"
-asyncpg==0.30.0 ; python_version >= "3.9" and python_version < "3.12"
-attrs==23.1.0 ; python_version >= "3.9" and python_version < "3.12"
-certifi==2023.11.17 ; python_version >= "3.9" and python_version < "3.12"
-cffi==1.16.0 ; python_version >= "3.9" and python_version < "3.12" and platform_python_implementation != "PyPy"
-click==8.1.7 ; python_version >= "3.9" and python_version < "3.12"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.12" and (sys_platform == "win32" or platform_system == "Windows")
-cryptography==42.0.8 ; python_version >= "3.9" and python_version < "3.12"
-dnspython==2.6.1 ; python_version >= "3.9" and python_version < "3.12"
-docstring-parser==0.16 ; python_version >= "3.9" and python_version < "3.12"
-email-validator==2.1.1 ; python_version >= "3.9" and python_version < "3.12"
-et-xmlfile==1.1.0 ; python_version >= "3.9" and python_version < "3.12"
+asyncmy==0.2.9 ; python_version >= "3.9" and python_version < "3.13"
+asyncpg==0.30.0 ; python_version >= "3.9" and python_version < "3.13"
+attrs==23.1.0 ; python_version >= "3.9" and python_version < "3.13"
+certifi==2023.11.17 ; python_version >= "3.9" and python_version < "3.13"
+cffi==1.16.0 ; python_version >= "3.9" and python_version < "3.13" and platform_python_implementation != "PyPy"
+click==8.1.7 ; python_version >= "3.9" and python_version < "3.13"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.13" and (sys_platform == "win32" or platform_system == "Windows")
+cryptography==42.0.8 ; python_version >= "3.9" and python_version < "3.13"
+dnspython==2.6.1 ; python_version >= "3.9" and python_version < "3.13"
+docstring-parser==0.16 ; python_version >= "3.9" and python_version < "3.13"
+email-validator==2.1.1 ; python_version >= "3.9" and python_version < "3.13"
+et-xmlfile==1.1.0 ; python_version >= "3.9" and python_version < "3.13"
 exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
-fastapi-cli==0.0.4 ; python_version >= "3.9" and python_version < "3.12"
-fastapi==0.111.0 ; python_version >= "3.9" and python_version < "3.12"
-frozenlist==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
-greenlet==1.1.3 ; python_version >= "3.9" and python_version < "3.12"
-gunicorn==22.0.0 ; python_version >= "3.9" and python_version < "3.12"
-h11==0.14.0 ; python_version >= "3.9" and python_version < "3.12"
-httpcore==1.0.2 ; python_version >= "3.9" and python_version < "3.12"
-httptools==0.6.1 ; python_version >= "3.9" and python_version < "3.12"
-httpx==0.27.0 ; python_version >= "3.9" and python_version < "3.12"
-idna==3.6 ; python_version >= "3.9" and python_version < "3.12"
-jinja2==3.1.3 ; python_version >= "3.9" and python_version < "3.12"
-lark==1.1.9 ; python_version >= "3.9" and python_version < "3.12"
-mako==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
-markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "3.12"
-markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "3.12"
-mdurl==0.1.2 ; python_version >= "3.9" and python_version < "3.12"
-multidict==6.0.4 ; python_version >= "3.9" and python_version < "3.12"
-mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "3.12"
-openpyxl==3.1.3 ; python_version >= "3.9" and python_version < "3.12"
-orjson==3.10.3 ; python_version >= "3.9" and python_version < "3.12"
-packaging==23.2 ; python_version >= "3.9" and python_version < "3.12"
-pint==0.23 ; python_version >= "3.9" and python_version < "3.12"
-pycparser==2.21 ; python_version >= "3.9" and python_version < "3.12" and platform_python_implementation != "PyPy"
-pydantic==1.10.15 ; python_version >= "3.9" and python_version < "3.12"
-pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.12"
-pymysql==1.1.1 ; python_version >= "3.9" and python_version < "3.12"
-python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.12"
-python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "3.12"
-python-magic==0.4.27 ; python_version >= "3.9" and python_version < "3.12"
-python-multipart==0.0.9 ; python_version >= "3.9" and python_version < "3.12"
-pytz==2024.1 ; python_version >= "3.9" and python_version < "3.12"
-pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "3.12"
-rich==13.7.1 ; python_version >= "3.9" and python_version < "3.12"
-shellingham==1.5.4 ; python_version >= "3.9" and python_version < "3.12"
-six==1.16.0 ; python_version >= "3.9" and python_version < "3.12"
-sniffio==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
-sqlalchemy==2.0.30 ; python_version >= "3.9" and python_version < "3.12"
-starlette==0.37.2 ; python_version >= "3.9" and python_version < "3.12"
-structlog-overtime==1.0.1 ; python_version >= "3.9" and python_version < "3.12"
-structlog==24.2.0 ; python_version >= "3.9" and python_version < "3.12"
-typed-argument-parser==1.10.0 ; python_version >= "3.9" and python_version < "3.12"
-typer==0.12.3 ; python_version >= "3.9" and python_version < "3.12"
-typing-extensions==4.8.0 ; python_version >= "3.9" and python_version < "3.12"
-typing-inspect==0.9.0 ; python_version >= "3.9" and python_version < "3.12"
-ujson==5.10.0 ; python_version >= "3.9" and python_version < "3.12"
-uvicorn==0.30.1 ; python_version >= "3.9" and python_version < "3.12"
-uvicorn[standard]==0.30.1 ; python_version >= "3.9" and python_version < "3.12"
-uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "3.12"
-watchfiles==0.22.0 ; python_version >= "3.9" and python_version < "3.12"
-websockets==12.0 ; python_version >= "3.9" and python_version < "3.12"
-yarl==1.9.3 ; python_version >= "3.9" and python_version < "3.12"
+fastapi-cli==0.0.4 ; python_version >= "3.9" and python_version < "3.13"
+fastapi==0.111.0 ; python_version >= "3.9" and python_version < "3.13"
+frozenlist==1.4.0 ; python_version >= "3.9" and python_version < "3.13"
+greenlet==3.1.1 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.9"
+gunicorn==22.0.0 ; python_version >= "3.9" and python_version < "3.13"
+h11==0.14.0 ; python_version >= "3.9" and python_version < "3.13"
+httpcore==1.0.2 ; python_version >= "3.9" and python_version < "3.13"
+httptools==0.6.1 ; python_version >= "3.9" and python_version < "3.13"
+httpx==0.27.0 ; python_version >= "3.9" and python_version < "3.13"
+idna==3.6 ; python_version >= "3.9" and python_version < "3.13"
+jinja2==3.1.3 ; python_version >= "3.9" and python_version < "3.13"
+lark==1.1.9 ; python_version >= "3.9" and python_version < "3.13"
+mako==1.3.0 ; python_version >= "3.9" and python_version < "3.13"
+markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "3.13"
+markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "3.13"
+mdurl==0.1.2 ; python_version >= "3.9" and python_version < "3.13"
+multidict==6.0.4 ; python_version >= "3.9" and python_version < "3.13"
+mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "3.13"
+openpyxl==3.1.5 ; python_version >= "3.9" and python_version < "3.13"
+orjson==3.10.3 ; python_version >= "3.9" and python_version < "3.13"
+packaging==24.2 ; python_version >= "3.9" and python_version < "3.13"
+pint==0.23 ; python_version >= "3.9" and python_version < "3.13"
+pycparser==2.21 ; python_version >= "3.9" and python_version < "3.13" and platform_python_implementation != "PyPy"
+pydantic==1.10.19 ; python_version >= "3.9" and python_version < "3.13"
+pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.13"
+pymysql==1.1.1 ; python_version >= "3.9" and python_version < "3.13"
+python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.13"
+python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "3.13"
+python-magic==0.4.27 ; python_version >= "3.9" and python_version < "3.13"
+python-multipart==0.0.9 ; python_version >= "3.9" and python_version < "3.13"
+pytz==2024.1 ; python_version >= "3.9" and python_version < "3.13"
+pyyaml==6.0.2 ; python_version >= "3.9" and python_version < "3.13"
+rich==13.7.1 ; python_version >= "3.9" and python_version < "3.13"
+shellingham==1.5.4 ; python_version >= "3.9" and python_version < "3.13"
+six==1.16.0 ; python_version >= "3.9" and python_version < "3.13"
+sniffio==1.3.0 ; python_version >= "3.9" and python_version < "3.13"
+sqlalchemy==2.0.36 ; python_version >= "3.9" and python_version < "3.13"
+starlette==0.37.2 ; python_version >= "3.9" and python_version < "3.13"
+structlog-overtime==1.0.1 ; python_version >= "3.9" and python_version < "3.13"
+structlog==24.2.0 ; python_version >= "3.9" and python_version < "3.13"
+typed-argument-parser==1.10.0 ; python_version >= "3.9" and python_version < "3.13"
+typer==0.12.3 ; python_version >= "3.9" and python_version < "3.13"
+typing-extensions==4.8.0 ; python_version >= "3.9" and python_version < "3.13"
+typing-inspect==0.9.0 ; python_version >= "3.9" and python_version < "3.13"
+ujson==5.10.0 ; python_version >= "3.9" and python_version < "3.13"
+uvicorn==0.30.1 ; python_version >= "3.9" and python_version < "3.13"
+uvicorn[standard]==0.30.1 ; python_version >= "3.9" and python_version < "3.13"
+uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "3.13"
+watchfiles==0.22.0 ; python_version >= "3.9" and python_version < "3.13"
+websockets==12.0 ; python_version >= "3.9" and python_version < "3.13"
+yarl==1.9.3 ; python_version >= "3.9" and python_version < "3.13"
