--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "asyncpg==0.30.0",
     # for the webserver
     "fastapi==0.111.0",
+    "starlette==0.37.2",
     "gunicorn==22.0.0",
     "uvicorn==0.30.1",
     # For parsing the filter expressions
