--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ aiosqlite==0.20.0
     # via amarcord (pyproject.toml)
 alembic==1.13.1
     # via amarcord (pyproject.toml)
+annotated-types==0.7.0
+    # via pydantic
 anyio==4.8.0
     # via
     #   amarcord (pyproject.toml)
@@ -18,9 +20,9 @@ asyncmy==0.2.10
     # via amarcord (pyproject.toml)
 asyncpg==0.30.0
     # via amarcord (pyproject.toml)
-attrs==25.1.0
+attrs==25.3.0
     # via aiohttp
-certifi==2024.12.14
+certifi==2025.1.31
     # via
     #   httpcore
     #   httpx
@@ -45,11 +47,11 @@ fastapi==0.111.0
     # via amarcord (pyproject.toml)
 fastapi-cli==0.0.7
     # via fastapi
-frozenlist==1.5.0
+frozenlist==1.6.0
     # via
     #   aiohttp
     #   aiosignal
-greenlet==3.1.1
+greenlet==3.2.0
     # via sqlalchemy
 gunicorn==22.0.0
     # via amarcord (pyproject.toml)
@@ -57,7 +59,7 @@ h11==0.14.0
     # via
     #   httpcore
     #   uvicorn
-httpcore==1.0.7
+httpcore==1.0.8
     # via httpx
 httptools==0.6.4
     # via uvicorn
@@ -69,11 +71,11 @@ idna==3.10
     #   email-validator
     #   httpx
     #   yarl
-jinja2==3.1.5
+jinja2==3.1.6
     # via fastapi
 lark==1.1.9
     # via amarcord (pyproject.toml)
-mako==1.3.8
+mako==1.3.10
     # via alembic
 markdown-it-py==3.0.0
     # via rich
@@ -83,7 +85,7 @@ markupsafe==3.0.2
     #   mako
 mdurl==0.1.2
     # via markdown-it-py
-multidict==6.1.0
+multidict==6.4.3
     # via
     #   aiohttp
     #   yarl
@@ -91,29 +93,31 @@ mypy-extensions==1.0.0
     # via typing-inspect
 openpyxl==3.1.5
     # via amarcord (pyproject.toml)
-orjson==3.10.15
+orjson==3.10.16
     # via fastapi
-packaging==24.2
+packaging==25.0
     # via
     #   gunicorn
     #   typed-argument-parser
 pint==0.23
     # via amarcord (pyproject.toml)
-propcache==0.2.1
+propcache==0.3.1
     # via yarl
 pycparser==2.22
     # via cffi
-pydantic==1.10.19
+pydantic==2.11.3
     # via
     #   amarcord (pyproject.toml)
     #   fastapi
+pydantic-core==2.33.1
+    # via pydantic
 pygments==2.19.1
     # via rich
 pymysql==1.1.1
     # via amarcord (pyproject.toml)
 python-dateutil==2.8.2
     # via amarcord (pyproject.toml)
-python-dotenv==1.0.1
+python-dotenv==1.1.0
     # via uvicorn
 python-magic==0.4.27
     # via amarcord (pyproject.toml)
@@ -125,11 +129,11 @@ pytz==2024.2
     # via amarcord (pyproject.toml)
 pyyaml==6.0.2
     # via uvicorn
-rich==13.9.4
+rich==14.0.0
     # via
     #   rich-toolkit
     #   typer
-rich-toolkit==0.13.2
+rich-toolkit==0.14.1
     # via fastapi-cli
 shellingham==1.5.4
     # via typer
@@ -153,9 +157,9 @@ structlog-overtime==1.0.1
     # via amarcord (pyproject.toml)
 typed-argument-parser==1.10.1
     # via amarcord (pyproject.toml)
-typer==0.15.1
+typer==0.15.2
     # via fastapi-cli
-typing-extensions==4.12.2
+typing-extensions==4.13.2
     # via
     #   aiosqlite
     #   alembic
@@ -163,12 +167,16 @@ typing-extensions==4.12.2
     #   fastapi
     #   pint
     #   pydantic
+    #   pydantic-core
     #   rich-toolkit
     #   sqlalchemy
     #   typer
     #   typing-inspect
+    #   typing-inspection
 typing-inspect==0.9.0
     # via typed-argument-parser
+typing-inspection==0.4.0
+    # via pydantic
 ujson==5.10.0
     # via fastapi
 uvicorn==0.30.1
@@ -178,9 +186,9 @@ uvicorn==0.30.1
     #   fastapi-cli
 uvloop==0.21.0
     # via uvicorn
-watchfiles==1.0.4
+watchfiles==1.0.5
     # via uvicorn
-websockets==14.2
+websockets==15.0.1
     # via uvicorn
-yarl==1.18.3
+yarl==1.20.0
     # via aiohttp
