--- a/requirements.txt
+++ b/requirements.txt
@@ -22,13 +22,13 @@ asyncpg==0.30.0
     # via amarcord (pyproject.toml)
 attrs==25.3.0
     # via aiohttp
-certifi==2025.1.31
+certifi==2025.4.26
     # via
     #   httpcore
     #   httpx
 cffi==1.17.1
     # via cryptography
-click==8.1.8
+click==8.2.1
     # via
     #   rich-toolkit
     #   typer
@@ -51,15 +51,15 @@ frozenlist==1.6.0
     # via
     #   aiohttp
     #   aiosignal
-greenlet==3.2.1
+greenlet==3.2.2
     # via sqlalchemy
 gunicorn==22.0.0
     # via amarcord (pyproject.toml)
-h11==0.14.0
+h11==0.16.0
     # via
     #   httpcore
     #   uvicorn
-httpcore==1.0.8
+httpcore==1.0.9
     # via httpx
 httptools==0.6.4
     # via uvicorn
@@ -85,7 +85,9 @@ markupsafe==3.0.2
     #   mako
 mdurl==0.1.2
     # via markdown-it-py
-multidict==6.4.3
+mstache==0.3.0
+    # via amarcord (pyproject.toml)
+multidict==6.4.4
     # via
     #   aiohttp
     #   yarl
@@ -93,7 +95,7 @@ mypy-extensions==1.1.0
     # via typing-inspect
 openpyxl==3.1.5
     # via amarcord (pyproject.toml)
-orjson==3.10.16
+orjson==3.10.18
     # via fastapi
 packaging==25.0
     # via
@@ -129,13 +131,13 @@ rich==14.0.0
     # via
     #   rich-toolkit
     #   typer
-rich-toolkit==0.14.3
+rich-toolkit==0.14.6
     # via fastapi-cli
 shellingham==1.5.4
     # via typer
 sniffio==1.3.1
     # via anyio
-sqlalchemy==2.0.36
+sqlalchemy==2.0.40
     # via
     #   amarcord (pyproject.toml)
     #   alembic
@@ -151,7 +153,7 @@ structlog-overtime==1.0.1
     # via amarcord (pyproject.toml)
 typed-argument-parser==1.10.1
     # via amarcord (pyproject.toml)
-typer==0.15.2
+typer==0.16.0
     # via fastapi-cli
 typing-extensions==4.13.2
     # via
@@ -169,7 +171,7 @@ typing-extensions==4.13.2
     #   typing-inspection
 typing-inspect==0.9.0
     # via typed-argument-parser
-typing-inspection==0.4.0
+typing-inspection==0.4.1
     # via pydantic
 ujson==5.10.0
     # via fastapi
