--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ aiosignal==1.3.2
     # via aiohttp
 aiosqlite==0.20.0
     # via amarcord (pyproject.toml)
-alembic==1.13.1
+alembic==1.16.1
     # via amarcord (pyproject.toml)
 annotated-types==0.7.0
     # via pydantic
@@ -47,7 +47,11 @@ fastapi==0.111.0
     # via amarcord (pyproject.toml)
 fastapi-cli==0.0.7
     # via fastapi
-frozenlist==1.6.0
+flexcache==0.3
+    # via pint
+flexparser==0.4
+    # via pint
+frozenlist==1.6.2
     # via
     #   aiohttp
     #   aiosignal
@@ -101,8 +105,10 @@ packaging==25.0
     # via
     #   gunicorn
     #   typed-argument-parser
-pint==0.23
+pint==0.24.4
     # via amarcord (pyproject.toml)
+platformdirs==4.3.8
+    # via pint
 propcache==0.3.1
     # via yarl
 pycparser==2.22
@@ -131,13 +137,13 @@ rich==14.0.0
     # via
     #   rich-toolkit
     #   typer
-rich-toolkit==0.14.6
+rich-toolkit==0.14.7
     # via fastapi-cli
 shellingham==1.5.4
     # via typer
 sniffio==1.3.1
     # via anyio
-sqlalchemy==2.0.40
+sqlalchemy==2.0.41
     # via
     #   amarcord (pyproject.toml)
     #   alembic
@@ -155,12 +161,14 @@ typed-argument-parser==1.10.1
     # via amarcord (pyproject.toml)
 typer==0.16.0
     # via fastapi-cli
-typing-extensions==4.13.2
+typing-extensions==4.14.0
     # via
     #   aiosqlite
     #   alembic
     #   anyio
     #   fastapi
+    #   flexcache
+    #   flexparser
     #   pint
     #   pydantic
     #   pydantic-core
